fix(breadcrumb): update last child icon color to #999 without link and add wrap span for item text node #INFR-3739 (#1929)
* fix(breadcrumb): update last child icon color to #999 without link and add wrap span for item text node #INFR-3739

* test: remove fdescribe

--- a/src/breadcrumb/styles/breadcrumb.scss
+++ b/src/breadcrumb/styles/breadcrumb.scss
@@ -23,6 +23,7 @@
         }
         &:last-child {
             color: variables.$breadcrumb-active-color;
+            @include icon-text.icon-text-variant(variables.$breadcrumb-text-color);
             a {
                 @include link.link-variant(variables.$breadcrumb-active-color, none, variables.$primary, none);
             }
